--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version "3"
 
 networks:
-	reverse_proxy:
-		external:
-			name: "reverse_proxy"
+  reverse_proxy:
+    external:
+      name: 
+        - "reverse_proxy"
 
 services:
 
