--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version "3"
 
 networks:
-  reverse_proxy:
-    external:
-      name: 
-        - "reverse_proxy"
+    reverse_proxy:
+      external:
+        name: "reverse_proxy"
 
 services:
 
